# collab

./: CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: database.py  main.py  models.py  names.py
migrations/: env.py
migrations/versions/: 554e8cec926c_add_canvases_table_and_lines_canvas_id_.py
static/: app.js  index.html  style.css
tests/: conftest.py  test_api.py  test_connection_manager.py  test_models.py  test_names.py  test_rate_limit_ws.py  test_rate_limiting.py  test_websocket.py
